🐛 Fixed bug with z index collapsing between components

--- a/componentsExperimental/navBar/Navbar.module.scss
+++ b/componentsExperimental/navBar/Navbar.module.scss
@@ -5,6 +5,7 @@
 }
 
 nav {
+  z-index: 2;
   position: relative;
   top: 13px;
   margin: 0 auto;
